AD modif swagger and adding ciations-api
